Max-width for article detail images to prevent weird text wrapping. Closes #22.

--- a/stylesheets/partials/_module.scss
+++ b/stylesheets/partials/_module.scss
@@ -60,6 +60,9 @@ header {
 		&.-left {
 			margin-left: 30px;
 		}
+		@include breakpoint(mobile-portrait) {
+			max-width: 50%;
+		}
 	}
 }
 .article-detail__sidebar {
